--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -94,6 +94,7 @@ jobs:
   #   name: Release
   #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
   #   needs:
+  #     - generate
   #     - test
   #     - lint
   #     - check-license
