--- a/.licenseignore
+++ b/.licenseignore
@@ -1,6 +1,8 @@
 ./CHANGELOG.md
 ./CODE_OF_CONDUCT.md
 ./CONTRIBUTING.md
+./.github/ISSUE_TEMPLATE/bug_report.md
+./.github/ISSUE_TEMPLATE/feature_request.md
 ./go.sum
 ./.licenseignore
 ./mu-app
