adding pull request template

--- a/.licenseignore
+++ b/.licenseignore
@@ -3,6 +3,7 @@
 ./CONTRIBUTING.md
 ./.github/ISSUE_TEMPLATE/bug_report.md
 ./.github/ISSUE_TEMPLATE/feature_request.md
+./.github/pull_request_template.md
 ./go.sum
 ./.licenseignore
 ./mu-app
